<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_main_home"
        android:icon="@drawable/ic_home"
        android:orderInCategory="100"
        android:title="@string/ic_bottom_home_1"
        />
    <item
        android:id="@+id/menu_main_wishlist"
        android:icon="@drawable/ic_favorite"
        android:orderInCategory="200"
        android:title="@string/ic_bottom_home_2"
        />
    <item
        android:id="@+id/menu_main_scan"
        android:icon="@drawable/ic_scan"
        android:orderInCategory="300"
        android:title="@string/ic_bottom_home_3" />
    <item
        android:id="@+id/menu_main_order"
        android:icon="@drawable/ic_list"
        android:orderInCategory="400"
        android:title="@string/ic_bottom_home_4"
        />
    <item
        android:id="@+id/menu_main_profile"
        android:icon="@drawable/ic_profile"
        android:orderInCategory="500"
        android:title="@string/ic_bottom_home_5"
        />
</menu>