<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/image_header"
            android:layout_width="match_parent"
            android:layout_height="192dp"
            android:background="@drawable/img_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="172dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="700dp"
            android:background="@color/white"
            app:cardCornerRadius="24dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_title_login"
                    android:layout_width="157dp"
                    android:layout_height="36dp"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/act_login_txt_title_masuk"
                    android:textColor="#22364A"
                    android:textFontWeight="600"
                    android:textSize="26sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.synrgy.homepoint.utils.HomePointTextInputLayout
                    android:id="@+id/filled_text_email"
                    android:layout_width="312dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title_login">

                    <EditText
                        style="@style/HomePointEditText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/act_login_hint_email"
                        android:textFontWeight="600" />

                </com.synrgy.homepoint.utils.HomePointTextInputLayout>


                <com.synrgy.homepoint.utils.HomePointTextInputLayout
                    android:id="@+id/filled_text_password"
                    android:layout_width="312dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:passwordToggleEnabled="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/filled_text_email">

                    <EditText
                        style="@style/HomePointEditText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        android:hint="@string/act_login_hint_password"
                        android:textFontWeight="600" />

                </com.synrgy.homepoint.utils.HomePointTextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_forget_password"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="22dp"
                    android:layout_marginEnd="200dp"
                    android:fontFamily="@font/inter_regular"
                    android:text="@string/act_login_tv_forget_password"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textFontWeight="400"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/filled_text_password" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="314dp"
                    android:layout_height="42dp"
                    android:layout_margin="24dp"
                    android:background="@drawable/button_background"
                    android:fontFamily="@font/inter_semibold"
                    android:text="@string/act_login_txt_btn_masuk"
                    android:textAllCaps="false"
                    android:textColor="#22364A"
                    android:textSize="16sp"
                    app:backgroundTint="@null"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_forget_password" />

                <FrameLayout
                    android:id="@+id/frame_layout_login"
                    android:layout_width="303dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="24dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_login">


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/ic_border_login"
                        android:textColor="@color/black" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/ic_border_login"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/inter_regular"
                        android:text="@string/act_login_desc_masuk_dengan"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </FrameLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_login_google"
                    android:layout_width="314dp"
                    android:layout_height="42dp"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/bg_btn_google"
                    android:drawableLeft="@drawable/ic_google"
                    android:paddingStart="80dp"
                    android:paddingEnd="80dp"
                    android:text="@string/act_login_txt_btn_google"
                    android:textAllCaps="false"
                    android:textColor="#22364A"
                    android:textSize="16sp"
                    app:backgroundTint="@null"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/frame_layout_login" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    app:layout_constraintTop_toBottomOf="@+id/btn_login_google">

                    <LinearLayout
                        android:id="@+id/linear_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/tv_desc_register"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter_regular"
                            android:text="@string/act_login_desc_no_account"
                            android:textColor="@color/black"
                            android:textFontWeight="400"
                            android:textSize="14sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/act_login_btn_daftar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:layout_marginStart="6dp"
                            android:fontFamily="@font/inter_semibold"
                            android:text="@string/act_login_txt_daftar"
                            android:textColor="#316093"
                            android:textSize="16sp" />
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_30"
                    android:src="@drawable/ic_homepoint_logo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/constraint_desc" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>